# esp32-awp-edge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
components/blake3/: CMakeLists.txt
components/mlkem768/: CMakeLists.txt  api.h  randombytes.c
demo-server/: README.md  awp_demo_server.py  requirements.txt
main/: CMakeLists.txt  Kconfig.projbuild  awp_crypto.c  awp_crypto.h  awp_edge_node.c  awp_edge_node.h  awp_protocol.c  awp_protocol.h  awp_stream.c  awp_stream.h  camera_driver.c  camera_driver.h  crypto_test.c  crypto_test.h  main.c  mic_driver.c  mic_driver.h  sensor_hub.c  sensor_hub.h
scripts/: e2e-test.sh
test/: esp_log.h  fuzz_awp.c  test_hdc.c  test_interop.c  test_interop.py  test_stress.c
